--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node ./api/chat/index.ts",
     "dev": "npx tsx ./api/chat/index.ts",
-    "build": "tsc"
+    "build": "npx tsx ./api/chat/index.ts"
   },
   "keywords": [],
   "author": "",
