--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "files": [],
   "references": [
-    { "path": "./client/tsconfig.app.json" },
+    { "path": "./client/tsconfig.json" },
     { "path": "./server/tsconfig.json" }
   ]
 }
