--- a/package.json
+++ b/package.json
@@ -17,7 +17,15 @@
     "@types/node": "^22.15.12"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.22",
+    "@datastax/astra-db-ts": "^1.5.0",
+    "@langchain/community": "^0.3.42",
+    "@langchain/core": "^0.3.54",
+    "@upstash/redis": "^1.34.9",
+    "ai": "^4.3.15",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "tsx": "^4.19.4"
   }
 }
