--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "node ./api/chat/index.ts",
     "dev": "npx tsx ./api/chat/index.ts",
-    "build": "npx tsx ./api/chat/index.ts"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
