--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
-    "@types/node": "^22.15.12"
+    "@types/node": "^22.15.12",
+    "typescript": "^5.8.3"
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.22",
