--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "client-build": "cd client && npm install && npm run build",
-    "server-build": "cd server && tsc",
+    "server-build": "cd api && tsc",
     "build": "npm run client-build && npm run server-build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
