--- a/api/package.json
+++ b/api/package.json
@@ -24,6 +24,7 @@
     "tsx": "^4.19.4"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/node": "^22.15.12",
