tsconfig.json loc changed

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,6 @@
   "files": [],
   "references": [
     { "path": "./client/tsconfig.json" },
-    { "path": "./server/tsconfig.json" }
+    { "path": "./api/tsconfig.json" }
   ]
 }
