--- a/api/package.json
+++ b/api/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "server",
+  "name": "api",
   "version": "1.0.0",
-  "description": "",
+  "description": "chatbot api",
   "main": "index.ts",
   "scripts": {
     "test": "node ./index.ts",
