--- a/package.json
+++ b/package.json
@@ -23,10 +23,9 @@
     "@langchain/community": "^0.3.42",
     "@langchain/core": "^0.3.54",
     "@upstash/redis": "^1.34.9",
+    "@vercel/node": "^5.1.15",
     "ai": "^3.4.33",
-    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
     "tsx": "^4.19.4"
   }
 }
