--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -10,7 +10,7 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "outDir": "./dist",
+    "outDir": "../dist-api",
     // "types": ["node"],
     /* */
 
