--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -29,5 +29,5 @@
     "noUncheckedSideEffectImports": true
   },
   // "include": ["../client/vite.config.ts"]
-  "include": ["./**/*"]
+  "include": ["./**/*.ts", "config/vectordb.ts"]
 }
