--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -10,7 +10,7 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "outDir": "../dist-api",
+    "outDir": "dist",
     // "types": ["node"],
     /* */
 
@@ -29,5 +29,5 @@
     "noUncheckedSideEffectImports": true
   },
   // "include": ["../client/vite.config.ts"]
-  "include": ["./**/*.ts", "config/vectordb.ts"]
+  "include": ["./**/*.ts"]
 }
