brings color back to skillcards_5

--- a/client/src/data/projects.json
+++ b/client/src/data/projects.json
@@ -3,8 +3,8 @@
     {
       "name": "Portfolio Website",
       "description": "Website that serves as a self introduction and as root to all my socials, and future projects",
-      "image": "/websiteDarkSnippet.png",
-      "imageAlt": "/websiteLightSnippet.png",
+      "image": "/portfolio/client/public/websiteDarkSnippet.png",
+      "imageAlt": "/portfolio/client/public/websiteLightSnippet.png",
       "tags": ["TypeScript", "ReactJs", "TailwindCSS", "Wouter"],
       "links": [
         {
@@ -22,7 +22,7 @@
     {
       "name": "High Voltage Peripherals",
       "description": "Capstone Project was done with the Global Formula Racing (GFR) Team at Oregon State, a International Formula Student team in conjunction with DHBW Ravensburg, as part of the ePowertrain sub-team. Designed and Functionally tested the DC-Link (DCL) and Brake System Plausibility Device (BSPD) for both FS and FSAE 2021 Competitions.",
-      "image": "/GFR-logo.png",
+      "image": "/portfolio/client/public/GFR-logo.png",
       "tags": ["Eagle CAD", "LTspice", "Digital Logic Design"],
       "links": [
         {
