using old skillcards and made this a monorepo

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "version": 2,
-  "rewrites": [{ "source": "/(.*)", "destination": "/api/index.js" }],
-  "outputDirectory": "client/dist"
+  "rewrites": [{ "source": "/(.*)", "destination": "/src/api/index.js" }],
+  "outputDirectory": "dist"
 }
