--- a/package.json
+++ b/package.json
@@ -1,31 +1,52 @@
 {
   "name": "portfolio",
-  "version": "1.0.0",
-  "description": "Made a root ",
-  "main": "index.js",
+  "version": "2.0.0",
+  "private": true,
+  "type": "module",
+  "description": "root package.json after merging split /client and /api back into src",
   "scripts": {
-    "client-build": "cd client && npm install && npm run build",
-    "api-build": "tsc -b api",
-    "build": "npm run client-build && npm run api-build",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "devDependencies": {
-    "@types/node": "^22.15.12",
-    "typescript": "^5.8.3"
+    "front-dev": "vite",
+    "back-dev": "npx tsx ./index.ts",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.22",
     "@datastax/astra-db-ts": "^1.5.0",
     "@langchain/community": "^0.3.42",
-    "@langchain/core": "^0.3.54",
+    "@langchain/core": "^0.3.55",
     "@upstash/redis": "^1.34.9",
     "@vercel/node": "^5.1.15",
     "ai": "^3.4.33",
     "dotenv": "^16.5.0",
-    "tsx": "^4.19.4"
+    "mapbox-gl": "^3.11.0",
+    "motion": "^12.9.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
+    "tsx": "^4.19.4",
+    "wouter": "^3.7.0",
+    "zod": "^3.24.2"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.21.0",
+    "@types/node": "^22.15.17",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.21.0",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^15.15.0",
+    "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^3.4.17",
+    "typescript": "~5.7.2",
+    "typescript-eslint": "^8.24.1",
+    "vite": "^6.2.0"
   }
 }
