--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "description": "root package.json after merging split /client and /api back into src",
   "scripts": {
     "front-dev": "vite",
-    "back-dev": "npx tsx ./api/index.ts",
+    "back-dev": "npx tsx ./api/routes.ts",
+    "gen": "npx tsx ./scripts/generate.ts",
     "build": "tsc -b && vite build",
+    "build-v2": "npm run gen && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
