--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
 
     /*New Additons after merge*/
     "outDir": "dist",
-    "rootDir": ".",
+    "rootDir": "src",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
 
@@ -28,5 +28,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src", "api"]
+  "include": ["src"]
 }
