--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
 
     /*New Additons after merge*/
     "outDir": "dist",
-    "rootDir": "src",
+    "rootDir": ".",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
 
