--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "front-dev": "vite",
     "back-dev": "npx tsx ./api/routes.ts",
-    "build": "tsc -b && vite build",
+    "build2": "tsc -b && vite build",
+    "gen": "npx tsx ./scripts/generate.ts",
+    "build": "npm run gen && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -26,7 +28,6 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
-    "tsx": "^4.19.4",
     "wouter": "^3.7.0",
     "zod": "^3.24.2"
   },
@@ -46,6 +47,7 @@
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
+    "tsx": "^4.19.4",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0"
