--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "back-dev": "npx tsx ./api/routes.ts",
     "build2": "tsc -b && vite build",
     "gen": "npx tsx ./scripts/generate.ts",
-    "build": "npm run gen && vite build",
+    "build": "npm run gen && tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
