--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
   "dependencies": {
     "@ai-sdk/openai": "^1.3.22",
     "@datastax/astra-db-ts": "^1.5.0",
-    "@langchain/community": "^0.3.42",
+    "@langchain/community": "^0.3.1",
     "@langchain/core": "^0.3.55",
+    "@langchain/openai": "^0.3.0",
     "@upstash/redis": "^1.34.9",
     "@vercel/node": "^5.1.15",
     "ai": "^3.4.33",
