--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,9 @@
     "rootDir": ".",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-
+    "paths": {
+      "@langchain/core": ["./node_modules/@langchain/core"]
+    },
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
