--- a/vercel.json
+++ b/vercel.json
@@ -2,13 +2,13 @@
   "version": 2,
   "rewrites": [{ "source": "/(.*)", "destination": "/api/routes.js" }],
   "outputDirectory": "dist",
-  "functions": [{
-    "api/**.ts": {
+  "functions": {
+    "api/**.ts": [{
       "includeFiles": [
         "node_modules/@langchain/**",
         "node_modules/openai/**",
         "node_modules/langchain/**"
       ]
-    }
-  }]
+    }]
+  }
 }
