--- a/vercel.json
+++ b/vercel.json
@@ -3,12 +3,8 @@
   "rewrites": [{ "source": "/(.*)", "destination": "/api/routes.js" }],
   "outputDirectory": "dist",
   "functions": {
-    "api/**.ts": [{
-      "includeFiles": [
-        "node_modules/@langchain/**",
-        "node_modules/openai/**",
-        "node_modules/langchain/**"
-      ]
-    }]
+    "api/**.ts": {
+      "includeFiles": "node_modules/**"
+    }
   }
 }
