--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "front-dev": "vite",
     "back-dev": "npx tsx ./api/routes.ts",
-    "gen": "npx tsx ./scripts/generate.ts",
+    "gen": "npx tsx ./src/scripts/generate.ts",
     "build123": "npm run gen && tsc -b && vite build",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
