--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "front-dev": "vite",
     "back-dev": "npx tsx ./api/routes.ts",
     "gen": "npx tsx ./src/scripts/generate.ts",
-    "build123": "npm run gen && tsc -b && vite build",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "tsx lib/db/migrate.ts",
+    "db:drop": "drizzle-kit drop",
+    "db:pull": "drizzle-kit introspect",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
+    "db:check": "drizzle-kit check"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^1.3.22",
     "@datastax/astra-db-ts": "^1.5.0",
     "@langchain/community": "^0.3.42",
     "@langchain/core": "^0.3.55",
@@ -25,6 +30,7 @@
     "dotenv": "^16.5.0",
     "mapbox-gl": "^3.11.0",
     "motion": "^12.9.2",
+    "openai": "^4.61.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
