--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,10 @@
 {
   "version": 2,
   "rewrites": [{ "source": "/(.*)", "destination": "/api/routes.js" }],
-  "outputDirectory": "dist"
+  "outputDirectory": "dist",
+  "functions": {
+    "api/routes.ts": {
+      "maxDuration": 180
+    }
+  }
 }
