--- a/package.json
+++ b/package.json
@@ -7,17 +7,11 @@
   "scripts": {
     "front-dev": "vite",
     "back-dev": "npx tsx ./api/routes.ts",
+    "dev": "npm run front-dev && npm run back-dev",
     "gen": "npx tsx ./src/scripts/generate.ts",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "db:generate": "drizzle-kit generate",
-    "db:migrate": "tsx lib/db/migrate.ts",
-    "db:drop": "drizzle-kit drop",
-    "db:pull": "drizzle-kit introspect",
-    "db:push": "drizzle-kit push",
-    "db:studio": "drizzle-kit studio",
-    "db:check": "drizzle-kit check"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@datastax/astra-db-ts": "^1.5.0",
