Vercel Timeout fix

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,5 @@
 {
   "version": 2,
   "rewrites": [{ "source": "/(.*)", "destination": "/api/routes.js" }],
-  "outputDirectory": "dist",
-  "functions": {
-    "api/routes.ts": {
-      "runtime": "edge"
-    }
-  }
+  "outputDirectory": "dist"
 }
