--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,23 +7,27 @@
     "module": "ESNext",
     "skipLibCheck": true,
 
+    /*Added for Next.js migration + new include and exclude*/
+    "resolveJsonModule": true,
+    "jsx": "preserve",
+    "allowJs": true,
+    "forceConsistentCasingInFileNames": true,
+    "incremental": true,
+    "plugins": [{ "name": "next" }],
+
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "moduleDetection": "force",
     "noEmit": true,
-    "jsx": "react-jsx",
 
     /*New Additons after merge*/
     "outDir": "dist",
     "rootDir": ".",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "paths": {
-      "@langchain/core": ["./node_modules/@langchain/core"],
-      "@langchain/community": ["./node_modules/@langchain/community"]
-    },
+
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
@@ -31,5 +35,6 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src"]
+  "include": ["./src", "./dist/types/**/*.ts", "./next-env.d.ts", "scripts"],
+  "exclude": ["./node_modules"]
 }
