--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -5,7 +5,7 @@
       "description": "Website that serves as a self introduction and as root to all my socials, and future projects",
       "image": "/websiteDarkSnippet.png",
       "imageAlt": "/websiteLightSnippet.png",
-      "tags": ["TypeScript", "ReactJs", "TailwindCSS", "Wouter"],
+      "tags": ["TypeScript", "ReactJs", "TailwindCSS", "NextJs"],
       "links": [
         {
           "name": "Source",
