--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mapbox-gl": "^3.11.0",
     "motion": "^12.9.2",
     "next": "^15.3.2",
+    "next-themes": "^0.4.6",
     "openai": "^4.61.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
