--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,6 +39,11 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["./src", "./dist/types/**/*.ts", "./next-env.d.ts", "**/*.css"],
+  "include": [
+    "./src",
+    "./dist/types/**/*.ts",
+    "./next-env.d.ts",
+    "declarations.d.ts"
+  ],
   "exclude": ["./node_modules"]
 }
