--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,7 +43,13 @@
     "./src",
     "./dist/types/**/*.ts",
     "./next-env.d.ts",
-    "declarations.d.ts"
+    "declarations.d.ts",
+    ".next/types/**/*.ts"
   ],
-  "exclude": ["./node_modules"]
+  "exclude": ["./node_modules"],
+  "tsx": {
+    "compilerOptions": {
+      "module": "CommonJS"
+    }
+  }
 }
