--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "description": "root package.json after merging split /client and /api back into src, then changing to next.js from vite to ensure api functionality in vercel",
   "scripts": {
     "dev": "NODE_OPTIONS='--inspect' next dev",
-    "gen": "npx tsx ./scripts/generate.ts",
+    "gen": "npx ts-node ./scripts/generate.ts",
     "build": "npm run gen && next build",
     "start": "next start",
     "lint": "eslint ."
@@ -40,7 +40,7 @@
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.21.0",
+    "eslint": "^9.26.0",
     "eslint-plugin-next": "^0.0.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
