--- a/tsconfig.json
+++ b/tsconfig.json
@@ -47,7 +47,7 @@
     ".next/types/**/*.ts"
   ],
   "exclude": ["./node_modules"],
-  "tsx": {
+  "ts-node": {
     "compilerOptions": {
       "module": "CommonJS"
     }
