--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "NODE_OPTIONS='--inspect' next dev",
     "gen": "npx tsx ./scripts/generate.ts",
-    "build": "npm run gen && next build --output public",
+    "build": "npm run gen && next build ",
     "start": "next start",
     "lint": "next lint ."
   },
