cleaned up ui, data, component logic

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -14,7 +14,7 @@
         },
         {
           "name": "Website",
-          "href": "https://portfolio-two-rust-85.vercel.app/",
+          "href": "https://www.magemi.dev/",
           "size": "xsmall"
         }
       ]
