--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -2,7 +2,7 @@
   "projects": [
     {
       "name": "Portfolio Website",
-      "description": "Website that serves as a self introduction and as root to all my socials, and future projects",
+      "description": "Website designed using Next.js to self-introduce and be a root to all socials and future projects.",
       "image": "/websiteDarkSnippet.png",
       "imageAlt": "/websiteLightSnippet.png",
       "tags": ["TypeScript", "ReactJs", "TailwindCSS", "NextJs"],
@@ -47,7 +47,7 @@
     },
     {
       "name": "High Voltage Peripherals",
-      "description": "Capstone Project was done with the Global Formula Racing (GFR) Team at Oregon State, a International Formula Student team in conjunction with DHBW Ravensburg, as part of the ePowertrain sub-team. Designed and Functionally tested the DC-Link (DCL) and Brake System Plausibility Device (BSPD) for both FS and FSAE 2021 Competitions.",
+      "description": "Capstone Project was done with the Global Formula Racing (GFR) Team at Oregon State University, a International Formula Student team in conjunction with DHBW Ravensburg, as part of the ePowertrain sub-team. Designed and Functionally tested the Direct Current Link (DCL) and Brake System Plausibility Device (BSPD) for both FS and FSAE 2021 Competitions.",
       "image": "/GFR-logo.png",
       "tags": ["Eagle CAD", "LTspice", "Digital Logic Design"],
       "links": [
